funct(fix): Cambios de Descripción

--- a/Porfolio-Web/src/components/Certificates.astro
+++ b/Porfolio-Web/src/components/Certificates.astro
@@ -123,7 +123,7 @@ const certificates = [
         const _trans = translations.en
         
         const _descEl = document.getElementById('cert-description')
-        if (_descEl) _descEl.textContent = "Below is a selection of my certificates. Showing my knowledge in different fields of programming and cybersecurity. As well as in languages like English."
+        if (_descEl) _descEl.textContent = "Below is a selection of my certificates, showcasing my knowledge across different areas of programming and cybersecurity. It also includes certifications in databases such as SQL, data analysis tools like Microsoft Excel, and language proficiency, including English. These certifications reflect my continuous learning mindset and my commitment to developing both technical and analytical skills."
         
         if (closeBtn) closeBtn.textContent = _trans.certificates.close
         
