funct(fix): Link Linkedin

--- a/Porfolio-Web/src/components/Hero.astro
+++ b/Porfolio-Web/src/components/Hero.astro
@@ -11,7 +11,7 @@ import SocialPill from "@/components/SocialPill.astro"
 <div class="max-w-xl">
   <div class="mb-4">
     <a
-      href="https://linkedin.com/in/mateoparentini"
+      href="https://www.linkedin.com/in/mateo-parentini-75026a363/"
       target="_blank"
       rel="noopener"
       class="inline-flex items-center transition md:justify-center md:hover:scale-105"
